Fixed activity instance tests