@@ -1,15 +1,20 @@
 package de.uni_potsdam.hpi.bpt.bp2014.jcore.executionbehaviors;
 
 import de.uni_potsdam.hpi.bpt.bp2014.database.data.DbDataFlow;
-import de.uni_potsdam.hpi.bpt.bp2014.database.data.DbDataNode;
 import de.uni_potsdam.hpi.bpt.bp2014.jcore.data.DataAttributeInstance;
 import de.uni_potsdam.hpi.bpt.bp2014.jcore.ScenarioInstance;
 import de.uni_potsdam.hpi.bpt.bp2014.jcore.controlnodes.AbstractControlNodeInstance;
+import de.uni_potsdam.hpi.bpt.bp2014.jcore.data.DataManager;
+import de.uni_potsdam.hpi.bpt.bp2014.jcore.data.DataObject;
 
-import java.util.LinkedList;
+import java.util.Collection;
+import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 /**
  * This class specifies the human task execution behavior.
+ * TODO is this needed
  */
 public class HumanTaskExecutionBehavior extends TaskExecutionBehavior {
 
@@ -25,20 +30,38 @@ public class HumanTaskExecutionBehavior extends TaskExecutionBehavior {
 	}
 
 	@Override public void execute() {
-		throw new IllegalStateException("Reimplement properly");
-//        DbDataFlow dbDataFlow = new DbDataFlow();
-//		//allow an activity to terminate if it has no data attributes in output.
-//		if (dbDataFlow.getOutputSetsForControlNode(
-//				getControlNodeInstance().getControlNodeId())
-//				.isEmpty()) {
-//			this.setCanTerminate(true);
-//		} else if (getScenarioInstance().getDataAttributeInstances().isEmpty()) {
-//			this.setCanTerminate(true);
-//		} else {
-//			LinkedList<Integer> outputSets = dbDataFlow.getOutputSetsForControlNode(
-//					getControlNodeInstance().getControlNodeId());
-//			int outputSet = outputSets.getFirst();
-//			DbDataNode dbDataNode = new DbDataNode();
-//		}
+        DbDataFlow dbDataFlow = new DbDataFlow();
+		//allow an activity to terminate if it has no data attributes in output.
+        int controlNodeId = this.getControlNodeInstance().getControlNodeId();
+        List<Integer> outputSets = dbDataFlow.getOutputSetsForControlNode(controlNodeId);
+        if (outputSets.isEmpty()) {
+			this.setCanTerminate(true);
+		} else if (getScenarioInstance().getDataAttributeInstances().isEmpty()) {
+			this.setCanTerminate(true);
+		} else {
+			int outputSet = outputSets.get(0);
+			DbDataFlow dataFlow = new DbDataFlow();
+            List<Integer> dataClassIds = dataFlow.getFollowingDataClassIds(controlNodeId);
+            if (attributeInOutputSet(dataClassIds)) {
+                this.setCanTerminate(true);
+            }
+        }
  	}
+
+    /**
+     * Checks whether one of the currently initialized data attributes
+     * references a data class id from the passed id's
+     *
+     * @param dataClassIds The dataclass ids from the output set to check
+     * @return
+     */
+    private boolean attributeInOutputSet(List<Integer> dataClassIds) {
+        DataManager dataManager = this.getScenarioInstance().getDataManager();
+        // get all data class ids from the currently initialized attributes
+        Set<Integer> attributeClassIds = dataManager.getDataObjects()
+                .stream().map(DataObject::getDataAttributeInstances).flatMap(Collection::stream)
+                .map(x -> x.getDataObject().getDataClassId()).collect(Collectors.toSet());
+        attributeClassIds.retainAll(dataClassIds);
+        return !attributeClassIds.isEmpty();
+    }
 }
